--- a/src/View/JFHome.form
+++ b/src/View/JFHome.form
@@ -85,7 +85,7 @@
                                   </Group>
                               </Group>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="btnGuardar" min="-2" pref="190" max="-2" attributes="0"/>
+                              <Component id="btnBuscar" min="-2" pref="190" max="-2" attributes="0"/>
                           </Group>
                           <Component id="btnHome1" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
@@ -147,7 +147,7 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="lblSucursal" min="-2" pref="34" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="btnGuardar" alignment="1" max="32767" attributes="0"/>
+                  <Component id="btnBuscar" alignment="1" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
               <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
@@ -157,13 +157,13 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JButton" name="btnGuardar">
+    <Component class="javax.swing.JButton" name="btnBuscar">
       <Properties>
         <Property name="text" type="java.lang.String" value="BUSCAR"/>
         <Property name="name" type="java.lang.String" value="bntGuardar" noResource="true"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnGuardarActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBuscarActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="txtCodigoCita">
@@ -284,6 +284,9 @@
             </Property>
             <Property name="contentAreaFilled" type="boolean" value="false"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEspecialistasActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnAuditoria">
           <Properties>
@@ -430,10 +433,10 @@
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="4">
-            <StringItem index="0" value="Item 1"/>
-            <StringItem index="1" value="Item 2"/>
-            <StringItem index="2" value="Item 3"/>
-            <StringItem index="3" value="Item 4"/>
+            <StringItem index="0" value="Programada  "/>
+            <StringItem index="1" value="Realizada"/>
+            <StringItem index="2" value="Cancelada"/>
+            <StringItem index="3" value=" "/>
           </StringArray>
         </Property>
       </Properties>
