--- a/src/View/JFHome.form
+++ b/src/View/JFHome.form
@@ -406,11 +406,10 @@
     <Component class="javax.swing.JComboBox" name="tipocita">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Item 1"/>
-            <StringItem index="1" value="Item 2"/>
-            <StringItem index="2" value="Item 3"/>
-            <StringItem index="3" value="Item 4"/>
+          <StringArray count="3">
+            <StringItem index="0" value="Seleccionar"/>
+            <StringItem index="1" value="Virtual"/>
+            <StringItem index="2" value="Presencial"/>
           </StringArray>
         </Property>
       </Properties>
@@ -432,11 +431,12 @@
     <Component class="javax.swing.JComboBox" name="cbxEstado">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Programada  "/>
-            <StringItem index="1" value="Realizada"/>
-            <StringItem index="2" value="Cancelada"/>
-            <StringItem index="3" value=" "/>
+          <StringArray count="5">
+            <StringItem index="0" value="Seleccionar"/>
+            <StringItem index="1" value="Programada  "/>
+            <StringItem index="2" value="Realizada"/>
+            <StringItem index="3" value="Cancelada"/>
+            <StringItem index="4" value=" "/>
           </StringArray>
         </Property>
       </Properties>
